--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
         <module>time-notifications-service</module>
         <module>api</module>
 	<module>domain</module>
+	<module>http-notifier</module>
 	<module>api-test-util</module>
     </modules>
     <packaging>pom</packaging>
@@ -21,11 +22,14 @@
         <maven.compiler.target>17</maven.compiler.target>
 
         <springboot.version>2.6.4</springboot.version>
+        <springframework.version>5.3.16</springframework.version>
         <assertj.version>3.21.0</assertj.version>
         <junit.version>5.8.2</junit.version>
         <mockito.version>4.3.1</mockito.version>
         <lombok.version>1.18.22</lombok.version>
         <hamcrest.version>2.2</hamcrest.version>
+        <okhttp.version>4.0.1</okhttp.version>
+        <equalsverifier.version>3.9</equalsverifier.version>
     </properties>
 
     <dependencyManagement>
@@ -47,12 +51,23 @@
             </dependency>
             <dependency>
                 <groupId>org.ignast.challenge.time-notifications</groupId>
+                <artifactId>http-notifier</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.ignast.challenge.time-notifications</groupId>
                 <artifactId>api-test-util</artifactId>
                 <version>${project.version}</version>
+                <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-web</artifactId>
+                <version>${springboot.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-webflux</artifactId>
                 <version>${springboot.version}</version>
             </dependency>
             <dependency>
@@ -64,6 +79,16 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-test</artifactId>
                 <scope>test</scope>
+                <version>${springboot.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-context</artifactId>
+                <version>${springframework.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-validation</artifactId>
                 <version>${springboot.version}</version>
             </dependency>
             <dependency>
@@ -79,14 +104,14 @@
                 <scope>test</scope>
             </dependency>
             <dependency>
-                <groupId>org.junit.jupiter</groupId>
-                <artifactId>junit-jupiter-params</artifactId>
-                <version>${junit.version}</version>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-core</artifactId>
+                <version>${mockito.version}</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>org.mockito</groupId>
-                <artifactId>mockito-core</artifactId>
+                <artifactId>mockito-inline</artifactId>
                 <version>${mockito.version}</version>
                 <scope>test</scope>
             </dependency>
@@ -105,6 +130,24 @@
                 <groupId>org.skyscreamer</groupId>
                 <artifactId>jsonassert</artifactId>
                 <version>1.5.0</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.squareup.okhttp3</groupId>
+                <artifactId>okhttp</artifactId>
+                <version>${okhttp.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.squareup.okhttp3</groupId>
+                <artifactId>mockwebserver</artifactId>
+                <version>${okhttp.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>nl.jqno.equalsverifier</groupId>
+                <artifactId>equalsverifier</artifactId>
+                <version>${equalsverifier.version}</version>
                 <scope>test</scope>
             </dependency>
         </dependencies>
