--- a/time-notifications-service/pom.xml
+++ b/time-notifications-service/pom.xml
@@ -16,6 +16,18 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.ignast.challenge.time-notifications</groupId>
+            <artifactId>api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.ignast.challenge.time-notifications</groupId>
+            <artifactId>http-notifier</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.ignast.challenge.time-notifications</groupId>
+            <artifactId>api-test-util</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <exclusions>
@@ -38,8 +50,12 @@
             <artifactId>lombok</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.ignast.challenge.time-notifications</groupId>
-            <artifactId>api-test-util</artifactId>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>mockwebserver</artifactId>
         </dependency>
     </dependencies>
 
